# kepler

./: README.md
.cargo/: config.toml  runner.sh
conf/: limine.cfg  linker.ld
crates/divvy/: Cargo.toml
crates/divvy/src/: bump.rs  global.rs  hybrid.rs  lib.rs  nop.rs
crates/entropy/: Cargo.toml
crates/entropy/src/: lib.rs
crates/hal/: Cargo.toml
crates/hal-core/: Cargo.toml
crates/hal-core/src/: access.rs  addr.rs  features.rs  interrupts.rs  lib.rs  page.rs  pow2.rs  region.rs  unsafe_mut.rs  vm.rs  volatile.rs
crates/hal-x86_64/: Cargo.toml
crates/hal-x86_64/src/: addr.rs  features.rs  interrupts.rs  intrin.rs  lib.rs  paging.rs  port.rs  reg.rs  task.rs
crates/hal-x86_64/src/interrupts/: controller.rs  idt.rs
crates/hal/src/: addr.rs  interrupts.rs  intrin.rs  lib.rs  page.rs  random.rs  region.rs  task.rs  x86_64.rs
crates/hal/src/x86/: reg.rs
crates/hal/src/x86_64/: instr.rs
crates/hal/src/x86_common/: instr.rs  reg.rs
crates/hal2/: Cargo.toml
crates/hal2/src/: interrupts.rs  lib.rs  paging.rs  task.rs  x86_64.rs  x86_common.rs
crates/hal2/src/x86_64/: gdt.rs  interrupts.rs  (+2 more)
crates/holo/: Cargo.toml
crates/holo/src/: lib.rs
crates/iris/: Cargo.toml
crates/iris/src/: lib.rs
crates/kepler/: Cargo.toml
crates/kepler/src/: allocator.rs  idt.rs  irq_mutex.rs  log.rs  logger.rs  main.rs  random.rs  stdout.rs  subscriber.rs  task.rs  vm.rs
crates/kepler/src/stdout/: serial.rs  terminal.rs
crates/kepler/src/task/: head.rs  scheduler.rs
crates/kernel/: Cargo.toml  design.adoc  roadmap.adoc
crates/kernel/src/: arch.rs  cpu_local.rs  error.rs  interrupt_table.rs  main.rs  memory.rs  process.rs  random.rs  soul_local.rs  stdio.rs  subscriber.rs  sync.rs  syscall.rs  task.rs  x86.rs
crates/kernel/src/arch/: x86_64.rs
crates/kernel/src/arch/x86_64/: cpu.rs  gdt.rs  idt.rs  syscall.rs  tss.rs
crates/kernel/src/memory/: allocator.rs  frame_allocator.rs  kernel.rs  page_fault.rs  process.rs  user.rs
crates/kernel/src/process/: capability.rs
crates/kernel/src/sync/: barrier.rs  futex.rs  lazy.rs  mutex.rs  once.rs  spinlock.rs
crates/kernel/src/task/: futex.rs  idle.rs  naive_scheduler.rs  naive_smp_scheduler.rs  process.rs  sched.rs  scheduler.rs  stack.rs  task_types.rs  thread.rs  wait_list.rs  work_stealing.rs
crates/kernel/src/task-old/: ng_scheduler.rs  scheduler.rs  simple_scheduler.rs  spmc.rs  thread.rs
crates/kernel/src/task/naive_scheduler/: queue.rs  soul.rs
crates/kernel/src/task/work_stealing/: spmc.rs
crates/lagrange/: Cargo.toml
crates/lagrange-sync/: Cargo.toml
crates/lagrange-sync/src/: event_count.rs  lazy.rs  lib.rs  mutex.rs  once_cell.rs
crates/lagrange/src/: atomic_wait.rs  event.rs  futex.rs  lib.rs  mutex.rs  queue_mutex.rs  scheduler.rs  sync.rs  task.rs  thread.rs
crates/lagrange/src/sync/: atomic.rs  lazy.rs  mutex.rs  once.rs  once_cell.rs  oneshot.rs  parking_lot.rs  queue_mutex.rs  spin_mutex.rs
crates/lagrange/src/task/: atomic_task.rs  header.rs  join_handle.rs  raw_task.rs  waker.rs
crates/meteor/: Cargo.toml
crates/meteor/src/: lib.rs  linked_list.rs  linked_stack.rs  mpsc_queue.rs  singly_linked_list.rs  tail_list.rs  tail_queue.rs
crates/nova/: Cargo.toml
crates/nova/src/: lib.rs  local.rs  page.rs  segment.rs
crates/nvme/: Cargo.toml
crates/nvme/src/: controller_attributes.rs  cqe.rs  lib.rs  sqe.rs
crates/pci/: Cargo.toml
crates/pci-types/: Cargo.toml
crates/pci-types/src/: lib.rs
crates/pci-x86/: Cargo.toml
crates/pci-x86/src/: lib.rs
crates/pci/src/: lib.rs
crates/skua/: Cargo.toml  README.md
crates/skua/src/: lib.rs  linked_list.rs  mpsc_queue.rs  unsafe_ref.rs
crates/staid/: Cargo.toml  README.md
crates/staid/src/: lib.rs  sync.rs  sys.rs
crates/thread-local/: Cargo.toml
crates/thread-local/src/: lib.rs
crates/vm/: Cargo.toml
crates/vm-types/: Cargo.toml
crates/vm-types/src/: addr.rs  addr2.rs  alloc.rs  frame.rs  frame_allocator.rs  lib.rs  page.rs  page_table.rs  phys_addr.rs  virt_addr.rs  virt_region.rs
crates/vm/src/: lib.rs  phys_alloc.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: build.rs  main.rs  run.rs
doc/: kernel.adoc  kernel_objects.adoc
(+18 files in other folders)
