[package]
name = "hal-x86_64"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.3.2"
bitfrob = "1.0.0"
hal-core = { version = "0.1.0", path = "../hal-core" }
pic8259 = "0.10.2"
x2apic = "0.4.2"
x86_64 = "0.14.10"
