[package]
name = "kepler"
version = "0.1.0"
edition = "2021"

[dependencies]
acpi = "4.1.1"
ahash = { version = "0.8.3", default-features = false }
cache-padded = "1.2.0"
divvy = { version = "0.1.0", path = "../divvy" }
entropy = { version = "0.1.0", path = "../entropy" }
hal = { version = "0.1.0", path = "../hal" }
hal2 = { version = "0.1.0", path = "../hal2" }
holo = { version = "0.1.0", path = "../holo" }
lagrange = { version = "0.1.0", path = "../lagrange" }
limine = "0.1.10"
limine-protocol = "0.4.0"
linked_list_allocator = "0.10.4"
lock_api = "0.4.9"
log = { version = "0.4.17", default-features = false }
nvme = { version = "0.1.0", path = "../nvme" }
pci = { version = "0.1.0", path = "../pci" }
pic8259 = "0.10.2"
rand_chacha = { version = "0.3.1", default-features = false }
spin = "0.9.5"
staticvec = { version = "0.11.9", default-features = false }
tracing = { version = "0.1.37", default-features = false }
tracing-subscriber = { version = "0.3.16", default-features = false, features = ["alloc"] }
uart_16550 = { version = "0.2.18", features = ["nightly"] }
x86_64 = "0.14.10"
