[package]
name = "kernel"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
ahash = { version = "0.8.3", default-features = false, features = [
    "compile-time-rng",
] }
bitflags = "1.3.2"
divvy = { version = "0.1.0", path = "../divvy" }
entropy = { version = "0.1.0", path = "../entropy" }
hal = { version = "0.1.0", path = "../hal2", default-features = false, package = "hal2" }
limine = "0.1.10"
linked_list_allocator = "0.10.5"
lock_api = "0.4.9"
log = { version = "0.4.17", default-features = false }
meteor = { version = "0.1.0", path = "../meteor" }
once_cell = { version = "1.17.1", default-features = false, features = [
    "race",
    "alloc",
] }
spin = "0.9.5"
uart_16550 = "0.2.18"
x86_64 = "0.14.10"
