[package]
name = "lagrange"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hal = { version = "0.1.0", path = "../hal" }
lock_api = "0.4.9"
log = { version = "0.4.17", default-features = false }
skua = { version = "0.1.0", path = "../skua" }
spin = "0.9.5"
